<resources>
    <string name="app_name">AU2048Game</string>
    <string name="action_settings">Settings</string>
    <string name="score">Score:</string>
    <string name="zero">0</string>
    <string name="up_arrow">the up arrow</string>
    <string name="down_arrow">the down arrow</string>
    <string name="left_arrow">the left arrow</string>
    <string name="right_arrow">the right arrow</string>
    <string name="restart">RESTART</string>
    <string name="restart_game_button">Restart Game button</string>
    <string name="high_score">Highscore:</string>
    <string name="tile">tile</string>
    <string name="sound_icon">Sound Icon</string>
    <string name="start_demo_mode">Start Demo Mode</string>
    <string name="about">About</string>
</resources>
