<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp3710.aj.au2048game.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="512dp">

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="50sp"
            android:layout_height="20sp"
            android:background="@drawable/rect"
            android:text="@string/score"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/scoreValue"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/scoreValue"
            android:layout_width="115sp"
            android:layout_height="20sp"
            android:background="@drawable/rect"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:layout_alignBaseline="@+id/scoreText"
            android:layout_alignBottom="@+id/scoreText"
            android:layout_alignEnd="@+id/rightArrow" />

        <ImageButton
            android:id="@+id/upArrow"
            android:layout_width="@dimen/button_dim"
            android:layout_height="@dimen/button_dim"
            android:layout_above="@+id/rightArrow"
            android:layout_toStartOf="@+id/rightArrow"
            android:background="@android:color/transparent"
            android:contentDescription="@string/up_arrow"
            android:src="@drawable/up_arrow" />

        <ImageButton
            android:id="@+id/downArrow"
            android:layout_width="@dimen/button_dim"
            android:layout_height="@dimen/button_dim"
            android:background="@android:color/transparent"
            android:contentDescription="@string/down_arrow"
            android:src="@drawable/down_arrow"
            android:layout_below="@+id/leftArrow"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:id="@+id/leftArrow"
            android:layout_width="@dimen/button_dim"
            android:layout_height="@dimen/button_dim"
            android:background="@android:color/transparent"
            android:contentDescription="@string/left_arrow"
            android:src="@drawable/left_arrow"
            android:layout_below="@+id/upArrow"
            android:layout_toStartOf="@+id/downArrow" />

        <ImageButton
            android:id="@+id/rightArrow"
            android:layout_width="@dimen/button_dim"
            android:layout_height="@dimen/button_dim"
            android:layout_marginBottom="95dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/right_arrow"
            android:src="@drawable/right_arrow"
            android:layout_above="@+id/restartButton"
            android:layout_toEndOf="@+id/downArrow" />

        <ImageButton
            android:id="@+id/restartButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="41dp"
            android:contentDescription="@string/restart_game_button"
            android:src="@drawable/restart_button" />

        <fragment
            android:id="@+id/boardFragment"
            android:name="comp3710.aj.au2048game.MainActivityFragment"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_above="@+id/upArrow"
            android:layout_alignEnd="@+id/scoreValue"
            android:layout_alignStart="@+id/scoreText"
            android:layout_below="@+id/scoreText"
            android:layout_marginTop="24dp"
            tools:layout="@layout/boardFragment_main" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
